// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<WarningBar /> should match snapshot for color "info" 1`] = `
{
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        aria-labelledby="warning-bar-content"
        class="mantine-1hh2io3"
        data-testid="WarningBar"
        id="warning-bar"
        role="status"
      >
        <div
          class="mantine-18ga9fd"
        >
          <span
            class="mantine-Text-root mantine-6yyg7l"
            data-testid="WhyLabsText"
            id="warning-bar-content"
          >
            The children
          </span>
        </div>
      </div>
    </div>
    <div>
      <div
        dir="ltr"
      />
    </div>
  </body>,
  "container": <div>
    <div
      aria-labelledby="warning-bar-content"
      class="mantine-1hh2io3"
      data-testid="WarningBar"
      id="warning-bar"
      role="status"
    >
      <div
        class="mantine-18ga9fd"
      >
        <span
          class="mantine-Text-root mantine-6yyg7l"
          data-testid="WhyLabsText"
          id="warning-bar-content"
        >
          The children
        </span>
      </div>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`<WarningBar /> should match snapshot for color "warn" 1`] = `
{
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        aria-labelledby="warning-bar-content"
        class="mantine-kcr27x"
        data-testid="WarningBar"
        id="warning-bar"
        role="status"
      >
        <div
          class="mantine-18ga9fd"
        >
          <span
            class="mantine-Text-root mantine-6yyg7l"
            data-testid="WhyLabsText"
            id="warning-bar-content"
          >
            The children
          </span>
        </div>
      </div>
    </div>
    <div>
      <div
        dir="ltr"
      />
    </div>
  </body>,
  "container": <div>
    <div
      aria-labelledby="warning-bar-content"
      class="mantine-kcr27x"
      data-testid="WarningBar"
      id="warning-bar"
      role="status"
    >
      <div
        class="mantine-18ga9fd"
      >
        <span
          class="mantine-Text-root mantine-6yyg7l"
          data-testid="WhyLabsText"
          id="warning-bar-content"
        >
          The children
        </span>
      </div>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;
